--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -1,11 +1,6 @@
 pipeline {  
-    agent any  
-
-
-    tools{    
-    	maven 'maven 3.8.2' 
-    }
-
+    
+agent{       docker{         image 'maven:3.6.1-jdk-8-slim'         args '-v $HOME/.m2:/root/.m2'       }
     
     stages{      
         stage("build"){          
@@ -28,7 +23,7 @@ pipeline {
         stage("package"){          
             steps{              
                 echo 'Packaging worker app' 
-                
+                dir('worker'){                  sh 'mvn package -DskipTests'                  archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true                }
             }      
             
         }  
