--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -1,47 +1,63 @@
-pipeline {  
-    
-agent{       docker{         image 'maven:3.6.1-jdk-8-alpine'         args '-v $HOME/.m2:/root/.m2'       }
-    
-    stages{      
-        stage("build"){          
-            steps{              
-                echo 'Compiling worker app'
-                dir('worker'){
-                    sh 'mvn compile'
-                }
-                
-            }      
-            
-        }      
-        stage("test"){          
-            steps{              
-                echo 'Running Unit Tets on worker app' 
-           
-            }      
-            
-        }      
-        stage("package"){          
-            steps{              
-                echo 'Packaging worker app' 
-                dir('worker'){                  sh 'mvn package -DskipTests'                  archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true                }
-            }      
-            
-        }  
-        
-    }  
-    
-    post{   
-        
-        always{        
-            
-            echo 'Building multibranch pipeline for worker is completed..'    
-            
-        }  
-        
+pipeline{
+
+    agent{
+                 docker{
+                   image 'maven:3.6.1-jdk-8-slim'
+                   args '-v $HOME/.m2:/root/.m2'
+	          }
     }
-    
+
+
+
+    stages{
+        stage("build"){
+            steps{
+                echo "Building worker app..."
+                dir("worker"){
+                  sh 'mvn compile'
+                }
+            }
+        }
+        stage("test"){
+            steps{
+                echo "Testing worker app..."
+                dir("worker"){
+                  sh 'mvn clean test'
+                }
+            }
+        }
+        stage("package"){
+            steps{
+                echo "Packaging worker app..."
+                dir("worker"){
+                  sh 'mvn package -DskipTests'
+                  archiveArtifacts artifacts: '**/target/*.jar', fingerprint:true
+                }
+            }
+        }
+
+       stage('docker-package'){
+         agent any
+         steps{
+           echo 'Packaging worker app with docker'
+           script{
+             docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
+                def workerImage = docker.build("aydakca/worker:v${env.BUILD_ID}", "./worker")
+                workerImage.push()
+                workerImage.push("latest")
+             }
+          } 
+      }
 }
 
+    }
+    
+    post{
+        always{
+            echo "This pipeline run is completed.."
+        }
+    }
+}
 
 
 
