--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -1,16 +1,20 @@
 pipeline{
 
-    agent{
-                 docker{
-                   image 'maven:3.6.1-jdk-8-slim'
-                   args '-v $HOME/.m2:/root/.m2'
-	          }
-    }
-
+    agent none 
 
 
     stages{
         stage("build"){
+            agent{
+                 docker{
+                   image 'maven:3.6.1-jdk-8-slim'
+                   args '-v m2cache:/root/.m2'
+                 }
+            } 
+
+            when{
+              changeset "**/worker/**"
+            }
             steps{
                 echo "Building worker app..."
                 dir("worker"){
@@ -19,6 +23,15 @@ pipeline{
             }
         }
         stage("test"){
+            agent{
+                 docker{
+                   image 'maven:3.6.1-jdk-8-slim'
+                   args '-v m2cache:/root/.m2'
+                 }
+            }
+            when{
+              changeset "**/worker/**"
+            }
             steps{
                 echo "Testing worker app..."
                 dir("worker"){
@@ -27,17 +40,30 @@ pipeline{
             }
         }
         stage("package"){
+            agent{
+                 docker{
+                   image 'maven:3.6.1-jdk-8-slim'
+                   args '-v m2cache:/root/.m2'
+                 }
+            }
+            when{
+              changeset "**/worker/**"
+              branch 'master'
+            }
             steps{
                 echo "Packaging worker app..."
                 dir("worker"){
                   sh 'mvn package -DskipTests'
-                  archiveArtifacts artifacts: '**/target/*.jar', fingerprint:true
+                  archiveArtifacts artifacts: '**/target/*.jar'
                 }
             }
         }
 
        stage('docker-package'){
          agent any
+         when{
+            changeset "**/worker/**"
+         }
          steps{
            echo 'Packaging worker app with docker'
            script{
@@ -58,15 +84,4 @@ pipeline{
         }
     }
 }
-
-
-
-
-
-
-
-
-
-
-
 
